# ICC2023-AD-CTF

./: .gitattributes  README.md
checkers/ArcaneLink/: Pipfile  checker.json  requirements.txt  setup.sh
checkers/MaScroll-1/: checker.json  checker.py  setup.sh
checkers/MaScroll-2/: checker.json  checker.py  setup.sh  utils.py
checkers/NorthernFiles/: checker.json  checker.ts  checklib.ts  package-lock.json  package.json  setup.sh  tsconfig.json
checkers/SeaOfHackerz/: checker.json  checker.py  checklib.py  setup.sh
checkers/UberPendragon/: .gitignore  checker.json  checker.py
data/: chart.json  flags.csv  scoreboard_services.csv  scoreboard_teams.csv  services.csv  status.json  stolen_flags.csv  table.json  team_services.csv  teams.csv
exploits/: .gitignore
exploits/ArcaneLink/: README.md  exploit_leak_key.c  exploit_leak_key.py  exploit_race_cond.c  exploit_race_cond.py  requirements.txt  simple_attacker.py  utils.py
exploits/MaScroll/: exploit-1-wildcard.py  exploit-2-confusion.py  exploit-2-reentrancy.py
exploits/NorthernFiles/: exploit1-ssrf.py  exploit2-login-bypass.py
exploits/SeaOfHackerz/: exploit_cookie.py  exploit_rng.py  exploit_sqli.py
exploits/UberPendragon/: .gitignore  exploit.py  setup.sh
services/ArcaneLink/: README.md  deploy-00-get-files.sh  deploy-01-host-setup.sh  deploy-02-create-vms.sh  deploy-03-start-service.sh  deploy.sh
services/MaScroll/: setup.ps1
sources/MaScroll/native/iis/: CMakeLists.txt  main.cpp  module.def
sources/MaScroll/native/macro/: CMakeLists.txt  builtins.cpp  builtins.h  exec.cpp  exec.h  main.cpp  objects.cpp  objects.h  parse.cpp  parse.h  util.cpp  util.h
sources/MaScroll/native/macro/lib/: CMakeLists.txt  bcryptprimitives.c  bcryptprimitives.def
(+253 files in other folders)
